Update function names.

--- a/experiments/Hopfield Layer.ipynb
+++ b/experiments/Hopfield Layer.ipynb
@@ -466,13 +466,13 @@
    "outputs": [],
    "source": [
     "def create_model(model_type: str):\n",
-    "    if model_type == 'dense':\n",
+    "    if model_type == 'continuous_dense':\n",
     "        model = tf.keras.Sequential([\n",
     "            ContinuousTimeHopfieldLayer(\n",
     "                DenseRecon(activation=tf.tanh),\n",
     "                reg_factor=1),\n",
     "        ])\n",
-    "    elif model_type == 'cnn':\n",
+    "    elif model_type == 'continuous_cnn':\n",
     "        model = tf.keras.Sequential([\n",
     "            ContinuousTimeHopfieldLayer(\n",
     "                Conv2dRecon(\n",
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -552,16 +552,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7813/7813 [==============================] - 40s 5ms/step - loss: 0.0000e+00\n"
+      "7813/7813 [==============================] - 44s 6ms/step - loss: 0.0000e+00\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7fab4a4e7510>"
+       "<tensorflow.python.keras.callbacks.History at 0x7f84a5758bd0>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,14 +576,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential\"\n",
+      "Model: \"sequential_2\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -615,8 +615,8 @@
     }
    ],
    "source": [
-    "# noised_X = X + np.random.normal(size=X.shape) * 0.1\n",
-    "noised_X = np.where(np.random.random(size=X.shape) < 0.3, -X, X)\n",
+    "# noised_X = X + np.random.normal(size=X.shape) * 0.2\n",
+    "noised_X = np.where(np.random.random(size=X.shape) < 0.2, -X, X)\n",
     "recon_X = model.predict(noised_X)\n",
     "\n",
     "try:\n",
@@ -630,8 +630,8 @@
     "\n",
     "orig_err = noised_X - X\n",
     "err = recon_X - X\n",
-    "print(f'{np.quantile(np.abs(orig_err), 0.99)} => '\n",
-    "      f'{np.quantile(np.abs(err), 0.99)}')"
+    "print(f'{np.quantile(np.abs(orig_err), 0.995)} => '\n",
+    "      f'{np.quantile(np.abs(err), 0.995)}')"
    ]
   },
   {
